# chrono-wisc

./: .gitattributes  .gitignore  CMakeCache.txt  CMakePresets.json  chrono-wisc.sln
LargeScaleAnalysisScripts/: analyze_viper_slope_data.py  viper_ncsa.sh
benchmarkAccPythonScripts/: CompareSphereDrop.py  README.md  SphereDrop.py
benchmarkPythonScripts/: README.md  benchmarkActiveVsNoActive.py  benchmarkParamCheck.py  benchmarkRTF.py  benchmarkScaling.py
benchmarkShellScripts/: README.md  benchmarkParamCheck.sh  benchmarkSmall.sh
cmake/: FindCudaArch.cmake  chrono-config.cmake.in
contrib/build-scripts/openvdb/: buildVDB.sh
contrib/build-scripts/windows/: buildVSG.bat
contrib/packaging-python/: __init__.py.conda.in  __init__.py.local.in
contrib/packaging-python/conda/: build.sh  meta.yaml
data/Circuit/MotorControl/: Circuit_Netlist.cir
data/LRV_Wagon/: Polaris_Chassis.json
data/fsi/: loading.csv
data/fsi/input_json/: demo_FSI_RASSOR_SingleDrum.json  demo_FSI_Rassor_granular_NSC.json  demo_FSI_SingleWheelTest_Granular.json  demo_FSI_SingleWheelTest_MoonRanger_Granular.json  demo_ROBOT_Viper_RealSlope.json
data/robot/lander/: generate_heightmap.py
data/vehicle/LRV/: Polaris.json  Polaris_Chassis.json  Polaris_RigidMeshTire.json  Polaris_RigidMeshTire_lug.json  Polaris_simple_driveline.json
data/vehicle/LRV_Wagon/: UT_Chassis.json  UT_LeafspringAxle.json  trailer_chassis.mtl
data/vehicle/Polaris/: Polaris_Chassis.json  Polaris_Front_DoubleWishbone.json  Polaris_LTV.json  Polaris_LTV_Chassis.json  Polaris_LTV_Front_DoubleWishbone.json  Polaris_Rear_TrailingArm.json  Polaris_RigidMeshTire.json  Polaris_simplest.json
data/vehicle/artcar/: blade_final.mtl  wheel_fan_60.csv  wheel_straight.csv
data/vehicle/ctrl_cmds/: cmd1.txt  cmd10.txt  cmd100.txt  cmd1000.txt  cmd1001.txt  cmd1002.txt  cmd1003.txt  cmd1004.txt  cmd1005.txt  cmd1006.txt  cmd1007.txt  cmd1008.txt  cmd1009.txt  cmd101.txt  cmd1010.txt  cmd1011.txt  cmd1012.txt  cmd1013.txt  cmd1014.txt  cmd1015.txt  cmd1016.txt  cmd1017.txt  cmd1018.txt  cmd1019.txt  cmd102.txt  cmd1020.txt  cmd1021.txt  cmd1022.txt  cmd1023.txt  cmd1024.txt  cmd1025.txt  cmd1026.txt  cmd1027.txt  cmd1028.txt  cmd1029.txt  cmd103.txt  cmd1030.txt  cmd1031.txt  cmd1032.txt  cmd1033.txt  (+1418 more)
data/vehicle/ctrl_cmds_leveltwice/: cmd0.txt  cmd1.txt  cmd10.txt  cmd100.txt  cmd1000.txt  cmd1001.txt  cmd1002.txt  cmd1003.txt  cmd1004.txt  cmd1005.txt  cmd1006.txt  cmd1007.txt  cmd1008.txt  cmd1009.txt  cmd101.txt  cmd1010.txt  cmd1011.txt  cmd1012.txt  cmd1013.txt  cmd1014.txt  cmd1015.txt  cmd1016.txt  cmd1017.txt  cmd1018.txt  cmd1019.txt  cmd102.txt  cmd1020.txt  cmd1021.txt  cmd1022.txt  cmd1023.txt  cmd1024.txt  cmd1025.txt  cmd1026.txt  cmd1027.txt  cmd1028.txt  cmd1029.txt  cmd103.txt  cmd1030.txt  (+8962 more)
data/vsg/: imgui.ini
paraview_states/: chrono.pvsm  chrono_crash.pvsm  chrono_vs_dual.pvsm  dualSPH_various_d0.pvsm
python_scripts/: README.md  SphereDrop_PS_Comparison_zeta.py  benchmarkRTF.py  blender_load_terrain.py  chrono_blender_render.py  chrono_blender_render_rassor.py  cone_penetration_plotting.py  cone_penetration_plotting_ps_comparison.py  penetrometer_folderParser.py  penetrometer_plot_single.py  penetrometer_plotting.py  plotConeCompare.py  plotConeCompareAVs.py  plotConeSingle.py  plot_plate_penetration.py  plot_terrain_benchmark.py  plot_veh.py  process_pressure.py  ps_freq_runTimeComp.py  rassor_singleDrum_multidir_plotting.py  rassor_singleDrum_plotting.py  render_headless.py  single_wheel_crm.py  splashsurf_preprocess.py  viper_singleWheel_DepthVar_plotting.py  viper_singleWheel_multidir_plotting.py  viper_singleWheel_plotting.py
python_scripts/sphereDropScripts/: SphereDrop.py  SphereDrop_PS_Comparison.py
reproduce_scripts/: README.md  launch_pull.sh  launch_ssl_bo_join.sh  launch_ssl_bo_stControllerOnly.sh  launch_ssl_bo_wheelOnly.sh
script/: run_pad.sh
scripts/: download.ps1  run_fsi_parametric.sh
shell_scripts/: README.md  benchmarkSmall.sh  benchmarkSmall_CRM_forRender.sh  benchmarkSmall_tamu.sh  benchmarkSmall_trackedVehicle.sh  benchmarkSmall_viper.sh  benchmark_demo_runs.sh  bev.sh  bev_nrel.sh  cone_nrel.sh  cone_penetration_paperRuns_bead.sh  cone_penetration_paperRuns_sand.sh  lander_runs_sbatch.sh  rassor_paper_runs.sh  run_terrain_benchmark.sh  run_terrain_benchmark_SCM.sh  viper_wheel_paperRuns.sh  viper_wheel_paperRuns_DepthVar.sh
src/: CMakeLists.txt
src/chrono/: CMakeLists.txt  ChConfig.h.in
src/chrono_cudss/: CMakeLists.txt  ChApiCuDSS.h  ChSolverCuDSS.cu  ChSolverCuDSS.h
src/chrono_fsi/: CMakeLists.txt  ChFsiProblem.cpp  ChFsiSystem.cpp  ChFsiSystem.h  ChFsiUtils.h  ChSystemFsi.cpp  ChSystemFsi.h
src/chrono_models/: ChApiModels.h
src/chrono_parsers/: ChSwigutils.h
src/chrono_postprocess/: ChBlender.cpp  ChBlender.h
src/chrono_powerelectronics/: CMakeLists.txt  ChElectronics.cpp  ChElectronics.h  ChElectronicsCosimResult.h  ChElectronicsCosimulation.cpp  ChElectronicsCosimulation.h  ChElectronicsExecutor.cpp  ChElectronicsExecutor.h  ChElectronicsManipulator.cpp  ChElectronicsManipulator.h  ChElectronicsNetlist.cpp  ChElectronicsNetlist.h  ChElectronicsSources.cpp  ChElectronicsSources.h  ChNgSpice.cpp  ChNgSpice.h
src/chrono_ros/: CLAUDE.md  CMakeLists.txt
src/chrono_sensor/: CMakeLists.txt  ChDynamicsManager.cpp  ChSensorManager.cpp
src/chrono_vehicle/: CMakeLists.txt  ChChassis.h  ChSubsysDefs.h
src/chrono_vsg/: ChVisualSystemVSG.cpp  ChVisualSystemVSG.h
src/chrono_worlds/: CMakeLists.txt  ChApiWorlds.h  ChConfigWorlds.h.in
src/chrono_worlds/quadtree/: GeoTIFFLoader.cpp  GeoTIFFLoader.h  Heightfield.cpp  Heightfield.h  Perlin.h  Quadtree.h  QuadtreeTile.cpp  QuadtreeTile.h  QuadtreeWorld.cpp  QuadtreeWorld.h
src/demos/: CMakeLists.txt  SetChronoSolver.h
src/demos/cudss/: CMakeLists.txt  demo_CUDSS_solver.cpp
src/demos/robot/lander/: CMakeLists.txt  demo_ROBOT_Lander_CRM.cpp  demo_ROBOT_Lander_CRM_Flat.cpp  demo_ROBOT_Lander_CRM_RTFBenchmark.cpp
src/demos/robot/lander/analysis/: plot_lander_crm_sweep.py
src/demos/robot/lander/model/: Lander.cpp
(+8556 files in other folders)
